Changed so that slider is responsive on Y-axis also, so now, when e.g. a lot of text is added, it will scale it's height. Also fixed a flicker when slide loops through, fix using CSS

--- a/tailwind/custom/components/components.css
+++ b/tailwind/custom/components/components.css
@@ -7,7 +7,6 @@
  *
  * — from https://tailwindcss.com/docs/plugins#adding-components
  */
-@import "./slider/slider.css";
 
 /**
  * Post title styles
@@ -121,7 +120,8 @@ article > *:not(.entry-content),
 
 .entry-content,
 .block-editor-block-list__layout {
-	h1 {
+	/* CUSTOM H1,H2,H3 STYLING */
+	/* h1 {
 		@apply text-2xl;
 	}
 
@@ -131,7 +131,7 @@ article > *:not(.entry-content),
 
 	h3 {
 		@apply text-lg;
-	}
+	} */
 
 	p,
 	ul,
